# fanalog

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: simple_rust.yml  ubuntu_default.yml
src/: main.rs
