[package]
name = "fanalog"
version = "0.1.2"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "Collect log files from multiple serial ports and forward to remote log service."

[dependencies]
serialport = "4.0.0"
reqwest = { version = "0.11", features = ["blocking"] }



